prod/google-cloud/3-dashy-app/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: dashy-nodeport
spec:
    type: NodePort
    selector:
        app: dashy
    ports:
        - name: dashy-port
          protocol: TCP
          port: 80
          targetPort: 80
